--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body {
 	background-size: cover;
 	color: white;
 	padding: 20px;
+	height: 500px;
 }
 
 .portada button {
@@ -119,7 +120,7 @@ body {
 
 .contenedor {
 	margin: auto;
-	width: 800px;
+	max-width: 800px;
 	position: relative;
 }
 
@@ -266,4 +267,153 @@ table, td, th {
 	font-size: 50px;
 	line-height: 20px;
 	color: white;
+}
+
+/* Media Querie*/
+
+@media screen and (max-width: 800px) {
+	.titulo {
+		font-size: 45px;
+		margin-top: 30px;
+	}
+
+	.title-a {
+		font-size: 18px;
+	}
+
+	.portada {
+		height: auto;
+	}
+
+	.portada .boton {
+		margin-bottom: 30px;
+		display: inline-block;
+	}
+
+	/*guitarras*/
+
+	.guitarras {
+		text-align: center;
+	}
+
+	.right, .left	{
+		float: none;
+		position: static;
+	}
+
+	.contenedor-guitarra-a {
+		margin-right: 0;
+	}
+
+	.guitarra-2 li {
+		list-style: none;
+	}
+
+	.guitarra-1 li {
+		list-style: none;
+	}
+	.contenedor-guitarra-b {
+		margin-left: 0;
+		position: static;
+	}
+
+	.guitarra-1 {
+		margin: 15px;
+	}
+
+	.guitarra-2 {
+		margin: 15px;
+	}
+}
+
+@media screen and (max-width: 767px)  {
+	.footer .contenedor {
+		display: inline-block;
+	}
+
+	.footer .contenedor a {
+		display: inline-block;
+	}
+	.footer .contenedor .contacto {
+		margin: 0 auto;
+		display: block;
+	}
+
+	.footer .contenedor .formulario {
+		display: block;
+		padding: : 0;
+	}
+
+
+}
+
+@media screen and (max-width: 690px)  {
+
+
+	.header {
+		text-align: center;
+	}
+	.menu {
+		position: static;
+		display: block;
+	}
+
+	.menu li:first-child {
+		margin:0;
+	}
+
+	.menu ul {
+		padding:0;
+	}
+
+	.logotipo {
+		margin:0;
+	}
+
+	.guitarra-1 img {
+		width: 200px;
+		height: auto;
+	}
+
+	.guitarra-2 img {
+		width: 200px;
+		height: auto;
+	}
+
+	.titulo-b {
+		font-size: 30px;
+	}
+
+	.contenedor-guitarra-a {
+		padding: 0;
+	}
+}
+
+@media screen and (max-width: 600px)  { 
+	.portada {
+		text-align: center;
+	}
+
+	.menu li {
+		display: block;
+		margin:0;
+		padding: 10px 0;
+		border-bottom: 1px solid white;
+	}
+
+	.menu li:before {
+		display: none;
+	}
+
+	.menu li:fist-child {
+		border-top: 1px solid white;
+	}
+
+	.titulo {
+		font-size: 30px;
+	}
+
+	.title-a {
+		font-size:  14px;
+	}
 }
