--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ table, td, th {
 
 @media screen and (max-width: 767px)  {
 	.footer .contenedor {
-		display: inline-block;
+		display: block;
 	}
 
 	.footer .contenedor a {
@@ -336,14 +336,24 @@ table, td, th {
 	}
 	.footer .contenedor .contacto {
 		margin: 0 auto;
-		display: block;
+		padding-top: 20px;
 	}
 
+	.interes label {
+		display: block;
+	}
 	.footer .contenedor .formulario {
 		display: block;
-		padding: : 0;
+		padding: 0;
+		width: 300px;
+
+    margin: 0 auto;
 	}
 
+	input[type="text"] {
+		font-size: 16px;
+		padding: 5px;
+	}
 
 }
 
