--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,20 @@ table, td, th {
 	left
 }
 
+.video-contenedor {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.video-directo {
+	position: relative;
+	padding-top: 56.4%;
+}
 /* Media Querie*/
 
 @media screen and (max-width: 800px) {
@@ -290,6 +304,10 @@ table, td, th {
 		margin-top: 30px;
 	}
 
+	.tabla .contenedor {
+		overflow: auto; /*le va  dar un scrolling interno*/
+		
+	}
 	.title-a {
 		font-size: 18px;
 	}
